# multimodal-rag-milvus

./: .env  .env.example  .gitignore  LICENSE  README.md  chainlit.md  k8s-multimodal-rag.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml
app/: chainlit_app.py
app/cache/: __init__.py  redis_cache.py
app/embeddings/: __init__.py  clip_encoder.py  text_encoder.py
app/generation/: __init__.py  llm_chain.py
app/ingestion/: __init__.py  image_loader.py  pdf_loader.py  pipeline.py
app/retrieval/: __init__.py  hybrid_retriever.py  reranker.py
app/utils/: __init__.py  config.py  logger.py
app/vectorstore/: __init__.py  milvus_client.py
docker/: Dockerfile  docker-compose.yml
evaluation/: __init__.py  ragas_eval.py
scripts/: evaluate.py  ingest.py
tests/: test_cache.py  test_ingestion.py  test_retrieval.py
