[tool.poetry]
name = "multimodal-rag"
version = "0.1.0"
description = "Production-grade Multimodal RAG system with Milvus, Chainlit, CLIP, and BGE-M3"
authors = ["AI Engineer <engineer@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# Interface & Orchestration
chainlit = ">=1.2.0"
langchain = ">=0.2.0"
langchain-openai = ">=0.1.0"
langchain-community = ">=0.2.0"

# Embeddings & Models
transformers = ">=4.40.0"
torch = ">=2.2.0"
torchvision = ">=0.17.0"
FlagEmbedding = ">=1.2.0"
sentence-transformers = ">=3.0.0"

# Vector Store
pymilvus = ">=2.4.0"

# Cache & Performance
redis = ">=5.0.0"
redisvl = ">=0.2.0"

# Document Ingestion
PyMuPDF = ">=1.24.0"
Pillow = ">=10.0.0"
unstructured = {extras = ["pdf"], version = ">=0.14.0"}

# Quality & Monitoring
ragas = ">=0.1.0"
loguru = ">=0.7.0"
pydantic-settings = ">=2.0.0"

# Utilities
tenacity = ">=8.2.0"
httpx = ">=0.27.0"
python-dotenv = ">=1.0.0"
numpy = ">=1.26.0"
tqdm = ">=4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-mock = ">=3.14.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
